# sqlalchemy-curso

./: .gitignore  README.md  prompt.txt  pyproject.toml
jupyter/: 01_setup_e_conexao.ipynb  02_modelando_com_core.ipynb  03_orm_modelos_e_sessao.ipynb  04_sql_injection_seguranca.ipynb  05_consultando_dados.ipynb  06_relacionamentos_n1_pandas.ipynb  07_consultas_compostas.ipynb  08_any_e_having.ipynb  09_joins_avancados.ipynb  models.py
jupyter/old/: 03_orm_modelos_e_sessao.ipynb  04_sql_injection_seguranca.ipynb  09_joins_avancados.ipynb  10_views_e_triggers.ipynb  11_update_delete_transacoes_core.ipynb
roteiro/: aula01.md  aula02.md  aula03.md  aula04.md  aula05.md  aula06.md  aula07.md  aula08.md  aula09.md  aula10.md  aula11.md
