[project]
name = "sqlalchemy-curso"
version = "0.1.0"
description = ""
authors = [
    {name = "dforoni",email = "deborah.foroni@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "faker (>=40.11.1,<41.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
